assets/css/main.css
@font-face {
  font-family: "W95FA";
  src: url("/fonts/W95FA.woff2") format("woff2");
  font-weight: normal;
  font-style: normal;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

:root {
  /* The Colors, Duke */
  --highlight-color: #fff;
  --light-gray: #e0e0e0;
  --main-gray: #c0c0c0;
  --dark-gray: #808080;
  --drop-shadow: #444444;
  --frame-shadow: #0a0a0a;
  --accent-color: #008080;
  /* Dimensions */
  --taskbar-height: 2rem;
  --taskbar-element-height: calc(var(--taskbar-height) - 4px);
  --window-title-height: 2rem;
  --window-btn-scale: calc(var(--window-title-height) - 8px);
  /* Bevels */
  --border-raised-outer:
    inset -1px -1px var(--frame-shadow), inset 1px 1px var(--highlight-color);
  --border-raised-inner:
    inset -2px -2px var(--dark-gray), inset 2px 2px var(--light-gray);
  /* Window Title Gradients */
  --dark-blue: #000080;
  --medium-blue: #0639a2;
  --med-l-blue: #0a56b4;
  --light-blue: #1084d0;
  --blue-gradient: linear-gradient(
    to right,
    var(--dark-blue),
    var(--medium-blue),
    var(--med-l-blue),
    var(--light-blue)
  );
}

body {
  background: var(--accent-color);
  font-family: "MS Sans Serif", Arial, sans-serif;
}
.desktop {
  display: grid;
  min-height: 100vh;
  grid-template-columns: 1fr;
  grid-template-rows: auto 1fr auto;
  grid-template-areas: "navbar" "content" "taskbar";
  gap: 4px;
}

.navbar {
  grid-area: navbar;
  padding: 10px;
}

.desktop-icon {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 4px;
  width: 80px;
  text-decoration: none;
  color: white;
}

.desktop-icon img {
  width: 48px;
  height: 48px;
  image-rendering: pixelated;
}

.desktop-icon:focus span,
.desktop-icon:hover span {
  background: var(--dark-blue);
  color: white;
}

.desktop-icon:hover img,
.desktop-icon:focus img {
  filter: brightness(0.5) sepia(1) hue-rotate(190deg) saturate(4);
}

.desktop-icon span {
  white-space: nowrap;
}

.nav-container {
  display: flex;
  flex-direction: row;
  gap: 8px;
  margin-right: 1rem;
  padding: 2px;
  justify-content: center;
}

.content {
  grid-area: content;
  padding: 12px;
}

/* Inner Windows */
.window-header {
  display: flex;
  justify-content: space-between;
  background: var(--blue-gradient);
  height: var(--window-title-height);
  color: var(--highlight-color);
  font-weight: bold;
}

.window-controls {
  display: flex;
  justify-content: center;
  gap: 2px;
}

.window-btn {
  display: flex;
  justify-content: center;
  background: var(--main-gray);
  box-shadow: var(--border-raised-outer), var(--border-raised-inner);
  border-top: solid 1px var(--light-gray);
  border-bottom: solid 1px black;
  align-items: center;

  width: var(--window-btn-scale);
  height: calc(var(--window-btn-scale) - 1px);
}

.btn-min::after {
  content: "";
  display: block;
  width: 45%;
  border-bottom: 3px solid black;
  margin-top: auto;
  margin-bottom: 3px;
}

.btn-max::after {
  content: "";
  display: block;
  width: 45%;
  height: 35%;
  border: 2px solid black;
  border-top: 4px solid black;
}

.btn-close {
  position: relative;
}

.btn-close::before,
.btn-close::after {
  content: "";
  position: absolute;
  width: 2px;
  height: 16px;
  background: black;
}

.btn-close::before {
  transform: rotate(45deg);
}

.btn-close::after {
  transform: rotate(-45deg);
}

.inner-window {
  background: var(--main-gray);
  height: 100%;
  box-shadow: var(--border-raised-outer), var(--border-raised-inner);
  padding: 3px;
  display: flex;
  flex-direction: column;
}

.window-header {
  padding: 6px;
  align-items: center;
  text-shadow: 1px 0 0 currentColor;
  font-weight: normal;
}

.window-body {
  padding: 10px;
  display: flex;
  flex-direction: column;
  flex: 1;
}

.window-body-inner {
  background: lightgray;
  flex: 1;
  box-sizing: border-box;
  padding: 10px;
  box-shadow:
    inset 1px 1px 0 var(--dark-gray),
    inset -1px -1px 0 var(--highlight-color);
}

/* Taskbar */
.taskbar {
  grid-area: taskbar;
  display: flex;
  justify-content: space-between;
  align-items: center;
  height: var(--taskbar-height);
  white-space: nowrap;
  background: var(--main-gray);
  padding: 0 3px 0 4px;
  border-top: 2px solid var(--light-gray);
  border-bottom: 2px solid var(--drop-shadow);
}

.start-btn {
  display: flex;
  justify-content: space-between;
  align-items: center;
  background: var(--main-gray);
  margin: 0;
  gap: 4px;
  height: var(--taskbar-element-height);
  padding: 0 8px;
  image-rendering: pixelated;
  border: none;
  box-shadow: var(--border-raised-outer), var(--border-raised-inner);
}
/* Sys Tray - Lives in taskbar */
.system-tray {
  display: flex;
  align-items: center;
  gap: 6px;
  background: var(--main-gray);
  margin: 0;
  padding: 0 6px;
  height: var(--taskbar-element-height);
  border: none;
  box-shadow:
    inset 1px 1px 0 var(--dark-gray),
    inset -1px -1px 0 var(--highlight-color);
}

.icon-container {
  display: flex;
  align-items: center;
  gap: 4px;
}

.tray-icon {
  display: flex;
  align-items: center;
  image-rendering: pixelated;
}

.pixel-font {
  font-family: "W95FA", "MS Sans Serif", Arial, sans-serif;
  font-size: 16px;
}

@media (min-width: 768px) {
  .desktop {
    grid-template-columns: 200px 1fr;
    grid-template-rows: 1fr auto;
    grid-template-areas: "navbar content" "taskbar taskbar";
  }
  .navbar {
    grid-area: navbar;
    height: 100%;
  }
  .nav-container {
    flex-direction: column;
    justify-content: start;
    align-items: center;
    height: 100%;
    gap: 24px;
    padding-top: 32px;
  }
}

